# opencv_candidate

./: CMakeLists.txt
cmake/: OpenCVUtils.cmake
src/: CMakeLists.txt
src/line_rgb/: CMakeLists.txt
src/line_rgb/include/: objdetect_line_rgb.hpp
src/line_rgb/include/opencv2/line_rgb/: line_rgb.hpp
src/line_rgb/samples/: line_test.cpp
src/line_rgb/src/: line_rgb.cpp
